Remove jdk15 valueOf methods
git-svn-id: https://svn.apache.org/repos/asf/jakarta/commons/proper/jexl/trunk@381325 13f79535-47bb-0310-9956-ffa450edef68